[gd_scene load_steps=12 format=3 uid="uid://f2lpxwck6hrt"]

[ext_resource type="Script" uid="uid://bqd16cp123gq" path="res://assets/scripts/interface/gameMenus/settingsMenu.gd" id="1_gobyd"]
[ext_resource type="FontFile" uid="uid://dh7j8o2l35way" path="res://assets/materials/JosefinSans-Bold.ttf" id="2_upf1o"]
[ext_resource type="Script" uid="uid://b3vckk3r1vgc5" path="res://assets/scripts/interface/translate/translateHandler.gd" id="3_7q68d"]
[ext_resource type="Script" uid="uid://kbfv44blqaag" path="res://assets/scripts/interface/translate/translateData.gd" id="4_n5rji"]

[sub_resource type="LabelSettings" id="LabelSettings_qw6eu"]
font = ExtResource("2_upf1o")
font_size = 20

[sub_resource type="Resource" id="Resource_w51w7"]
script = ExtResource("4_n5rji")
node_path = NodePath("../header")
code = "main_menu.settings"
metadata/_custom_type_script = "uid://kbfv44blqaag"

[sub_resource type="Resource" id="Resource_qaqis"]
script = ExtResource("4_n5rji")
node_path = NodePath("../langLabel")
code = "settings.lang_label"
metadata/_custom_type_script = "uid://kbfv44blqaag"

[sub_resource type="Resource" id="Resource_m37ky"]
script = ExtResource("4_n5rji")
node_path = NodePath("../lang")
code = "settings.lang_value"
metadata/_custom_type_script = "uid://kbfv44blqaag"

[sub_resource type="Resource" id="Resource_e3s3j"]
script = ExtResource("4_n5rji")
node_path = NodePath("../fullscreenLabel")
code = "settings.fullscreen_label"
metadata/_custom_type_script = "uid://kbfv44blqaag"

[sub_resource type="Resource" id="Resource_cccqn"]
script = ExtResource("4_n5rji")
node_path = NodePath("../fullscreen")
code = "settings.fullscreen_button"
metadata/_custom_type_script = "uid://kbfv44blqaag"

[sub_resource type="Resource" id="Resource_1j2m0"]
script = ExtResource("4_n5rji")
node_path = NodePath("../volumeLabel")
code = "settings.volume_label"
metadata/_custom_type_script = "uid://kbfv44blqaag"

[node name="settingsPanel" type="Panel"]
visible = false
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -120.0
offset_right = 344.0
offset_bottom = 128.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("1_gobyd")

[node name="header" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
text = "Settings"
label_settings = SubResource("LabelSettings_qw6eu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="langLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -60.0
offset_right = -40.0
offset_bottom = -29.0
grow_horizontal = 2
grow_vertical = 2
text = "Language:"
horizontal_alignment = 2

[node name="lang" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 32.0
offset_top = -60.0
offset_right = 112.0
offset_bottom = -29.0
grow_horizontal = 2
grow_vertical = 2
text = "Eng"

[node name="fullscreenLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -12.0
offset_right = -40.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
text = "Fullscreen:"
horizontal_alignment = 2

[node name="fullscreen" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 32.0
offset_top = -12.0
offset_right = 112.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
text = "Change"

[node name="volumeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = 36.0
offset_right = -40.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
text = "Volume:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="volume" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = 44.0
offset_right = 136.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="translation" type="Node" parent="."]
script = ExtResource("3_7q68d")
nodes = Array[ExtResource("4_n5rji")]([SubResource("Resource_w51w7"), SubResource("Resource_qaqis"), SubResource("Resource_m37ky"), SubResource("Resource_e3s3j"), SubResource("Resource_cccqn"), SubResource("Resource_1j2m0")])

[connection signal="pressed" from="lang" to="." method="_on_lang_pressed"]
[connection signal="pressed" from="fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="value_changed" from="volume" to="." method="_on_volume_value_changed"]
